--- a/styles/main.css
+++ b/styles/main.css
@@ -8,3 +8,13 @@ button {
     border-radius: 5px;
     background-color: tomato;
 }
+
+/* DEPARTMENT STYLES */
+.department {
+    margin: 20px 0;
+}
+
+.department-image {
+    width: 100%;
+    height: 200px;
+}
