--- a/styles/main.css
+++ b/styles/main.css
@@ -18,3 +18,15 @@ button {
     width: 100%;
     height: 200px;
 }
+
+.grey-out {
+    opacity: 0.4;
+}
+
+.department-title {
+    color: white;
+    position: absolute;
+    top: 75px;
+    font-size: 25px;
+    left: 50px;
+}
