errythang's working i think

--- a/styles/main.css
+++ b/styles/main.css
@@ -30,3 +30,13 @@ button {
     font-size: 25px;
     left: 50px;
 }
+
+/* ITEMS */
+.item-image {
+    height: 100px;
+    width: 100px;
+}
+
+.item .panel {
+    height: 200px;
+}
